# python-start-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: lint.yml  release.yml  tests.yml
src/hello_world/: __init__.py  main.py
tests/: test_hello_world.py
