[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hello_world"
authors = [{name = "Ricky White", email = "ricky@whitelionmedia.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
version = "0.0.1"
dependencies = [
    "#TODO"
]

[project.urls]
Home = "https://endlesstrax.com"
Documentation = "#TODO"
Source = "#TODO"
