[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello_world"
authors = [{name = "Ricky White", email = "ricky@whitelionmedia.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["description"]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
version = "0.0.1"
dependencies = []

[project.urls]
Home = "https://github.com/EndlessTrax/python-start-project"
Documentation = "https://github.com/EndlessTrax/python-start-project"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.1",
]
